# EjerciciosColaborativos3

./: CMakeLists.txt  Music.cpp  Music.h
app/: CMakeLists.txt  main.cpp
libs/containers/: CMakeLists.txt
libs/containers/include/pel/: Dynarray.h  Vector.h
music/: CMakeLists.txt
music/include/: Album.h  MusicRepository.h  Song.h
music/src/: Album.cpp  MusicRepository.cpp  Song.cpp
tests/: CMakeLists.txt  test_music.cpp  test_video.cpp
video/: CMakeLists.txt
video/include/: Title.h  VideoRepository.h
video/src/: Title.cpp  VideoRepository.cpp
